--- a/src/components/PostCard/Postcard.scss
+++ b/src/components/PostCard/Postcard.scss
@@ -4,10 +4,11 @@
 .postcard {
   width: 100%;
   border-radius: 5px;
-  background-color: darken($secondary-color, 5%);
+  background-color: darken($secondary-color, 7%);
   margin-bottom: 0.7rem;
   padding: 8px;
   position: relative;
+  z-index: 1;
 }
 
 .postcard_title_wrapper {
@@ -108,6 +109,7 @@ img .vinyl_channel {
 .comment_container {
   background-color: darken($secondary-color, 10%);
   border: 0.5px solid $accent-one;
+  border-radius: 5px;
   padding: 4%;
 }
 
